--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,27 @@
 <div class="login-container bg-light">
   <div class="login-box">
-    <h1 translate>APP_NAME</h1>
-    <div>
+    <h1>Serius Game</h1>
+    <!-- <div>
       <h6 class="d-inline-block">v{{ version }}</h6>
       <div class="d-inline-block ml-3" ngbDropdown>
-        <button id="language-dropdown" class="btn btn-sm btn-secondary" ngbDropdownToggle>
+        <button
+          id="language-dropdown"
+          class="btn btn-sm btn-secondary"
+          ngbDropdownToggle
+        >
           {{ currentLanguage }}
         </button>
         <div ngbDropdownMenu aria-labelledby="language-dropdown">
-          <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
+          <button
+            class="dropdown-item"
+            *ngFor="let language of languages"
+            (click)="setLanguage(language)"
+          >
             {{ language }}
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="container">
       <div class="card col-md-6 mt-3 mx-auto">
         <div class="card-body">
@@ -21,8 +29,8 @@
             <i class="far fa-3x fa-user-circle text-muted"></i>
           </h4>
           <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
-            <div class="alert alert-danger" [hidden]="!error || isLoading" translate>
-              Username or password incorrect.
+            <div class="alert alert-danger" [hidden]="!error || isLoading">
+              Usuario o contraseña incorrecta
             </div>
             <div class="form-group">
               <label class="d-block">
@@ -31,15 +39,18 @@
                   class="form-control"
                   formControlName="username"
                   autocomplete="username"
-                  [placeholder]="'Username' | translate"
+                  [placeholder]="'Usuario'"
                 />
-                <span hidden translate>Username</span>
+                <span hidden translate>Usuario</span>
                 <small
-                  [hidden]="loginForm.controls.username.valid || loginForm.controls.username.untouched"
+                  [hidden]="
+                    loginForm['controls']['username'].valid ||
+                    loginForm['controls']['username'].untouched
+                  "
                   class="text-danger"
                   translate
                 >
-                  Username is required
+                  Usuario es necesario
                 </small>
               </label>
               <label class="d-block">
@@ -48,28 +59,35 @@
                   class="form-control"
                   formControlName="password"
                   autocomplete="current-password"
-                  [placeholder]="'Password' | translate"
+                  [placeholder]="'Contraseña'"
                   required
                 />
-                <span hidden translate>Password</span>
+                <span hidden translate>Contraseña</span>
                 <small
-                  [hidden]="loginForm.controls.password.valid || loginForm.controls.password.untouched"
+                  [hidden]="
+                    loginForm['controls']['password'].valid ||
+                    loginForm['controls']['password'].untouched
+                  "
                   class="text-danger"
                   translate
                 >
-                  Password is required
+                  Contraseña es necesario
                 </small>
               </label>
-              <div class="form-check">
+              <!-- <div class="form-check">
                 <label class="form-check-label">
                   <input type="checkbox" class="form-check-input" formControlName="remember" />
                   <span translate>Remember me</span>
                 </label>
-              </div>
+              </div> -->
             </div>
-            <button class="btn btn-primary w-100" type="submit" [disabled]="loginForm.invalid || isLoading">
+            <button
+              class="btn btn-primary w-100"
+              type="submit"
+              [disabled]="loginForm.invalid || isLoading"
+            >
               <i class="fas fa-cog fa-spin" [hidden]="!isLoading"></i>
-              <span translate>Login</span>
+              <span translate>Iniciar sersión</span>
             </button>
           </form>
         </div>
