--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container bg-light">
   <div class="login-box">
-    <h1>Serius Game</h1>
+    <h1>Serious Game</h1>
     <!-- <div>
       <h6 class="d-inline-block">v{{ version }}</h6>
       <div class="d-inline-block ml-3" ngbDropdown>
